syntax = "proto3";

package go_idm.v1;
option go_package = "grpc/go_idm_v1pro";

service GoIDMService {
	rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
	rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse) {}
	rpc CreateDownloadTask(CreateDownloadTaskRequest) returns (CreateDownloadTaskResponse) {}
	rpc GetDownloadTaskList(GetDownloadTaskListRequest) returns (GetDownloadTaskListResponse) {}
	rpc UpdateDownloadTask(UpdateDownloadTaskRequest) returns (UpdateDownloadTaskResponse) {}
	rpc DeleteDownloadTask(DeleteDownloadTaskRequest) returns (DeleteDownloadTaskResponse) {}
	rpc GetDownloadTaskFile(GetDownloadTaskFiletRequest) returns (stream GetDownloadTaskFiletResponse) {}
}

enum DownloadType {
	UndefinedDownloadType = 0;
	HTTP = 1;
}

enum DownloadStatus {
	UndefinedDownloadStatus = 0;
	Pending = 1;
	Downloading = 2;
	Failed = 3;
	Succeeded = 4;
}

message Account {
	uint64 id = 1;
	string account_name = 2;
}

message DownloadTask {
	uint64 id = 1;
	DownloadType download_type = 2;
	string url = 3;
	DownloadStatus download_status = 4;
}

message CreateAccountRequest {
	string account_name = 1;
	string password = 2;
}

message CreateAccountResponse {
	uint64 account_id = 1;
}

message CreateSessionRequest {
	string account_name = 1;
	string password = 2;
}

message CreateSessionResponse {
	string token = 1;
}

message CreateDownloadTaskRequest {
	string token = 1;
	DownloadType download_type = 2;
	string url = 3;
}

message CreateDownloadTaskResponse {
	DownloadTask download_task = 1;
}

message GetDownloadTaskListRequest {
	string token = 1;
	uint64 offset = 2;
	uint64 limit = 3;
}

message GetDownloadTaskListResponse {
	repeated DownloadTask download_task_list = 1;
	uint64 total_download_task_count = 2;
}

message UpdateDownloadTaskRequest {	
	string token = 1;
	uint64 download_task_id = 2;
	string url = 3;
}

message UpdateDownloadTaskResponse {
	DownloadTask download_task = 1;
}

message DeleteDownloadTaskRequest {
	string token = 1;
	uint64 download_task_id = 2;
}

message DeleteDownloadTaskResponse {}

message GetDownloadTaskFiletRequest {
	string token = 1;
	uint64 download_task_id = 2;
}

message GetDownloadTaskFiletResponse {
	bytes data = 1;
}

